<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:text="@string/title"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="@string/cars"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_margin="16dp"
        android:textAlignment="textEnd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />
    <TextView
        android:id="@+id/tab_favorites"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="@string/favorites"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_margin="16dp"
        android:textAlignment="textStart"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />




<androidx.recyclerview.widget.RecyclerView
    android:id="@+id/rv_car_list"
    android:layout_width="0dp"
    android:layout_height="0dp"
    app:layout_constraintTop_toBottomOf="@id/tab_favorites"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toTopOf="@id/bt_navegar"
    android:padding="16dp"
    tools:listitem="@layout/card_car"
    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
    />



    <Button
        android:id="@+id/bt_navegar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"
        android:text="Calcular"
        />
</androidx.constraintlayout.widget.ConstraintLayout>